// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`draw game should write game state 1`] = `
Array [
  "┌────────────────────────────────────────────────────────────────────┐
│[32m█[0m[32m█[0m[32m█[0m[32m█[0m[32m█[0m[32m█[0m[32m█[0m                                                             │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│         [35m█[0m                                                          │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘

┌────────────────────────────┐
│  Snek Length: 07           │
└────────────────────────────┘

Move snek with arrow keys, or h,j,k,l",
]
`;

exports[`draw game should write rainbow color snek 1`] = `
Array [
  "┌────────────────────────────────────────────────────────────────────┐
│[33m█[0m[32m█[0m[33m█[0m[31m█[0m[35m█[0m[36m█[0m[33m█[0m[32m█[0m[33m█[0m[31m█[0m[35m█[0m                                                         │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│         [35m█[0m                                                          │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘

┌────────────────────────────┐
│  Snek Length: 11           │
└────────────────────────────┘

Move snek with arrow keys, or h,j,k,l",
]
`;
